
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 OCT 01a
  * in model/fluid/_Favre*/fluid.hh
    - added #define _FLUID_WALLDISTANCE
  * in model/fluid/_Favre*/fluid_bdry.c
    - added is_node_bdry_wall_fluid()
  * in model/fluid/*/fluid_bdry.c
    - fixed a bug in is_node_bdry_symmetry_plane_fluid(): double RET should be bool RET
  * in model/fluid/_Favre-Reynolds/fluid_post.c
    - in find_post_variable_*_fluid(), added the variable "wall distance"
  * in src/common.h
    - in npbs_t, added walldistance2
  * in src/control.c
    - added reduce_wall_distance_given_wallxyz()
    - added find_wall_distance()
    - in readcontrol_actions(), added call to find_wall_distance()
    

2023 SEP 29a
  * in cycle/*/cycle.c (except _standard)
    - in init_cycle(), added gl->AVERAGEDRATES=AVERAGEDRATES_OFF
  * in cycle/_standard/cycle.c
    - in runtime_actions_cycle_specific(), added AVERAGEDRATES passed as the last argument
      of UpdateFluid()
    - in runtime_actions_cycle_specific(), added calls to SetAveragedRates() and AddToAveragedRates()
  * in cycle/share/cycle_share.c
    - in update_runtime_codex_vars_except_xi_from_gl(), added AVERAGEDRATES_OFF and 
      AVERAGEDRATES_ON
    - added set_averaged_rates()
    - added add_to_averaged_rates()
  * in model/chem/*/chem.c
    - added parameter np to functions find_W() and find_dW_dx()
  * in model/chem/_NH3_Plasma_10s/bavafa2008.c
    - added _averaged_rate() call to reactions 1 and 2
  * in model/chem/_NH3_Plasma_10s/chem.hh
    - added definition of _AVERAGEDRATES, numaveragedrates, and averagedrates_react
  * in model/fluid/_*/fluid_source.c
    - in find_Schem() and find_dSchem_dU(), added parameter np[l] to find_W() and find_dW_dx()